19 August 2010: Wouter
	- Fix bug#321: resolution of rs.ripe.net artifacts with 0x20.
	  Delegpt structures checked for duplicates always.
	  No more nameserver lookups generated when depth is full anyway.
	- example.conf notes how to do DNSSEC validation and track the root.
	- iana portlist updated.

18 August 2010: Wouter
	- Fix bug#322: configure does not respect CFLAGS on Solaris.
	  Pass CFLAGS="-xO4 -xtarget=generic" on the configure command line
	  if use sun-cc, but some systems need different flags.

16 August 2010: Wouter
	- Fix acx_nlnetlabs.m4 configure output for autoconf-2.66 AS_TR_CPP
	  changes, uses m4_bpatsubst now.
	- make test (or make check) should be more portable and run the unit 
	  test and testbound scripts. (make longtest has special requirements).

13 August 2010: Wouter
	- More pleasant remote control command parsing.
	- documentation added for return values reported by doxygen 1.7.1.
	- iana portlist updated.

9 August 2010: Wouter
	- Fix name of rrset printed that failed validation.

5 August 2010: Wouter
	- Return NXDOMAIN after chain of CNAMEs ends at name-not-found.

4 August 2010: Wouter
	- Fix validation in case a trust anchor enters into a zone with
	  unsupported algorithms.

3 August 2010: Wouter
	- updated ldns tarball with bugfixes.
	- release tag 1.4.6.
	- trunk becomes 1.4.7 develop.
	- iana portlist updated.

22 July 2010: Wouter
	- more error details on failed remote control connection.

15 July 2010: Wouter
	- rlimit adjustments for select and ulimit can happen at the same time.

14 July 2010: Wouter
	- Donation text added to README.
	- Fix integer underflow in prefetch ttl creation from cache.  This
	  fixes a potential negative prefetch ttl.

12 July 2010: Wouter
	- Changed the defaults for num-queries-per-thread/outgoing-range.
	  For builtin-select: 512/960, for libevent 1024/4096 and for
	  windows 24/48 (because of win api).  This makes the ratio this way