@@ -404,13 +404,6 @@ void comm_point_close(struct comm_point* c);
 void comm_point_delete(struct comm_point* c);
 
 /**
- * Reset the callback argument for a comm point.
- * @param c: the comm point to change.
- * @param arg: the new callback user argument.
- */
-void comm_point_set_cb_arg(struct comm_point* c, void* arg);
-
-/**
  * Send reply. Put message into commpoint buffer.
  * @param repinfo: The reply info copied from a commpoint callback call.
  */
