@@ -1,3 +1,9 @@
+20 August 2010: Wouter
+	- openbsd-lint fixes: acl_list_get_mem used if debug-alloc enabled.
+	  iterator get_mem includes priv_get_mem.  delegpt nodup removed.
+	  listen_pushback, query_info_allocqname, write_socket, send_packet,
+	  comm_point_set_cb_arg and listen_resume removed.
+
 19 August 2010: Wouter
 	- Fix bug#321: resolution of rs.ripe.net artifacts with 0x20.
 	  Delegpt structures checked for duplicates always.
